# Tacker

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Creator.cu  Creator.h  GPTBKernel.h  Kernel.h  Logger.cc  Logger.h  MixKernel.h  ModuleCenter.cu  ModuleCenter.h  Recorder.cc  Recorder.h  TackerConfig.h.in  Task.cu  Task.h  TaskManager.cu  TaskManager.h  json.cc  json.h  main.cu  readatom.c  tzgemm_kernel.h  util.h
src/config/: kinfo-bert-1-1.json  kinfo-bert.json  kinfo-common.json  kinfo-inception3.json  kinfo-resnet50-1-1.json  kinfo-resnet50.json  kinfo-vgg11.json  kinfo-vgg16-1-1.json  kinfo-vgg16.json  kinfo-vit.json  kinfo.json  kinfo_new.json
src/dnn/: data.py  func_list.json  test.cu
src/dnn/bert/: bert.cu  bert.h  bert_kernel_class.h  bert_tmp.cu
src/dnn/inception3/: inception3.cu  (+3 more)
src/file_t/: readatom.c
src/gptb_kernel/: cdgemm_kernel.cu  cp_kernel.cu  cutcp_kernel.cu  fft_kernel.cu  hot3d_kernel.cu  lava_kernel.cu  lbm_kernel.cu  mrif_kernel.cu  mriq_kernel.cu  nn_kernel.cu  path_kernel.cu  sgemm_kernel.cu  stencil_kernel.cu  tzgemm_kernel.cu
src/header/: atom.h  cp_header.h  cutcp_header.h  fft_header.h  hot3d_header.h  lava_header.h  lbm_header.h  mrif_header.h  mriq_header.h  nn_header.h  path_header.h  pets_common.h  sgemm_header.h  stencil_header.h  tzgemm_header.h
src/include/: dnn.h
src/mix_kernel/: cp_fft_3_1.cu  cp_sgemm_1_1.cu  cutcp_fft_1_1.cu  cutcp_sgemm_1_1.cu  fft_lbm_6_1.cu  fft_mriq_3_2.cu  fft_sgemm_1_4.cu  fft_stencil_5_3.cu  hot3d_lava.cu  hot3d_nn.cu  hot3d_path.cu  lava_nn.cu  lava_path.cu  lbm_mrif_1_3.cu  lbm_mriq_1_2.cu  lbm_sgemm_1_7.cu  mrif_sgemm_1_4.cu  mrif_stencil_3_2.cu  mriq_sgemm_1_2.cu  nn_path.cu  tzgemm_cp.cu  tzgemm_cutcp.cu  tzgemm_fft.cu  tzgemm_hot3d.cu  tzgemm_lava.cu  tzgemm_lbm.cu  tzgemm_mrif.cu  tzgemm_mriq.cu  tzgemm_nn.cu  tzgemm_path.cu  tzgemm_sgemm.cu  tzgemm_stencil.cu
src/nnf/: gen_code.py  initparam.py  mycudnn.py  mysgemm.py  util.cmd
src/ori_kernel/: cp_kernel.cu  cp_kernel.h  cutcp_kernel.cu  cutcp_kernel.h  fft_kernel.cu  fft_kernel.h  hot3d_kernel.cu  hot3d_kernel.h  lava_kernel.cu  lava_kernel.h  lbm_kernel.cu  lbm_kernel.h  mrif_kernel.cu  mrif_kernel.h  mriq_kernel.cu  mriq_kernel.h  nn_kernel.cu  nn_kernel.h  path_kernel.cu  path_kernel.h  sgemm_kernel.cu  sgemm_kernel.h  stencil_kernel.cu  stencil_kernel.h
src/raw_kernel/: Makefile  nsight_profile.sh  ori_cp.cu  ori_cutcp.cu  ori_fft.cu  ori_hot3d.cu  ori_lava.cu  ori_nn.cu  ori_path.cu
(+388 files in other folders)
